# usbctl

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
src/: actions.rs  device.rs  lib.rs  main.rs
src/actions/: filter.rs
