[package]
name = "usbctl-cli"
version = "0.1.0"
authors = ["mexus <gilaldpellaeon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "usbctl"
path = "src/main.rs"

[dependencies]

structopt = "0.3"
anyhow = "1"
display-error-chain = "0.1"
fern = "0.6"
nix = "0.20"
log = "0.4"
libc = "0.2"
caps = "0.5.1"
maplit = "1"

usbctl = { path = ".." }
